<resources>
    <string name="app_name">Situação Financeira</string>

    <!--Textos Principais-->
    <string name="bancos">Bancos</string>
    <string name="bancos_list">Lista de Bancos:</string>
    <string name="saldo_principal">Saldo Total</string>
    <string name="debitos">Debitos</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_em_conta">Saldo em Conta</string>
    <string name="saldo_liquido">Saldo Liquido</string>
    <string name="banco_nome">Nome do Banco</string>
    <string name="login">Acesse sua Conta</string>
    <string name="cadastrar">Ainda não tem uma conta?</string>
    <string name="cadastro">criar conta</string>
    <string name="logininstrucoes">Faça login ou cadastre a sua conta</string>
    <string name="btnLogIn">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="criarConta">Faça seu Cadastro</string>
    <string name="criarContaC">Cadastrar</string>
    <string name="saldoLiquidoTotal">Saldo em conta</string>
    <string name="InvestimentosTEXT">Saldo Investido</string>
    <string name="text_carregando">R$ 0.000,00</string>
    <string name="text_resume">Resumo</string>
    <string name="text_contasList">Minhas Contas</string>
    <string name="text_adicionar">Nova Conta</string>
    <string name="text_tipo">Tipo de conta</string>
    <string name="tipo_corretora">Corretora de investimentos</string>
    <string name="tipo_contacorretne">Conta corrente</string>
    <string name="tipo_crypto">Cryptomoedas [BETA]</string>
    <string name="text_addConta">Adicionar</string>
    <string name="app_contas">Contas</string>
    <string name="app_contascadastradas">Contas cadastradas</string>
    <string name="app_navall">carregando...</string>
    <string name="trazacao">Adicionar Transação</string>
    <string name="namedescription">Nome da transação</string>
    <string name="valordecription">Valor R$</string>
    <string name="credito">Credito</string>


    <string name="saldoTotalInvestido">Salto total investido</string>
    <string name="acoes">Ações</string>
    <string name="fiis">Fundos Imobiliários</string>
    <string name="rendFix">Renda Fixa</string>
    <string name="proventos">Proventos</string>
    <string name="contadeInvestimentos">Conta de Investimentos</string>


</resources>