<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secundaria">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/trazacao"
        android:textColor="@color/textoPrincipal"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/textoPrincipal"
        android:ems="10"
        android:hint="@string/valordecription"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColor="@color/textoPrincipal"
        android:textColorHint="@color/textoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debitos"
        android:textColor="@color/txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDebito"
        app:layout_constraintEnd_toEndOf="@+id/btnDebito"
        app:layout_constraintStart_toStartOf="@+id/btnDebito" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credito"
        android:textColor="@color/txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCredito"
        app:layout_constraintEnd_toEndOf="@+id/btnCredito"
        app:layout_constraintStart_toStartOf="@+id/btnCredito" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnDebito"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:background="@color/acento"
        android:scaleType="centerCrop"
        android:src="@drawable/debitoo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCredito"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnCredito"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        android:background="@color/acento"
        android:scaleType="centerCrop"
        android:src="@drawable/creditoo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDebito"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>